syntax = "proto3";
package dogma.messaging.v1;

option go_package = "github.com/dogmatiq/infix/api/internal/pb";

import "api/internal/pb/types.proto";

// CommandExecutor is a service for executing command messages.
service CommandExecutor {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}

message ExecuteRequest{
  string application_key = 1;
  Envelope command = 2;
}

message ExecuteResponse{
}

// EventStream is a service for consuming event messages.
service EventStream {
  rpc Consume(ConsumeRequest) returns (stream ConsumeResponse);
}

message ConsumeRequest{
  string application_key = 1;
  uint64 offset = 2;
  repeated string events = 3;
}

message ConsumeResponse{
  uint64 offset = 1;
  Envelope event = 2;
}
